[package]
name = "clipclip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pv_porcupine = "*"
pv_recorder = "*"
ctrlc = "*"
chrono = "*"
dotenv_codegen = "*"
enigo = { path = "./enigo", version = "0.0.14"}
